--- a/Assigment 1/Assigment 1.csproj
+++ b/Assigment 1/Assigment 1.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>Assigment_1</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2" />
+    </ItemGroup>
+
 </Project>
