Css error solved

--- a/Assigment 1/Assigment 1.csproj
+++ b/Assigment 1/Assigment 1.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\css\custom" />
+    </ItemGroup>
+
 </Project>
