--- a/Assigment 1/Assigment 1.csproj
+++ b/Assigment 1/Assigment 1.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Persistence" />
       <Folder Include="wwwroot\css\custom" />
     </ItemGroup>
 
